# web-portal-template

./: .gitignore  Cargo.toml  README.md  autoupdater.py  deployment.example
.github/workflows/: build.yml  check.yml
frontend/: index.html
frontend/src/: Blocks.tsx  Dashboard.tsx  LoginProvider.tsx  LoginScreen.tsx  WelcomeScreen.tsx  index.css  main.tsx
frontend/src/common/: DisplayUtils.ts
frontend/src/logic/: Accounting.ts
migrations/: 20241004000001_init.sql  20241008000002_scan.sql
src/: main.rs
src/api/: user.rs
src/db/: connection.rs  ops.rs
src/db/model/: mod.rs  transaction.rs
src/db/ops/: transaction.rs  user.rs
src/error/: macros.rs  mod.rs  wrapped.rs
src/scan/: api.rs  balance.rs  block.rs  cmd.rs  mod.rs  run.rs
