[package]
name = "web-portal"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.7"
actix-rt = "2.10"
actix-web = "4.9"
actix-web-httpauth = "0.8"
awc = "3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["cargo", "derive"] }
dotenv = "0.15"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
pbkdf2 = { version = "0.12", features = ["simple"] }
mime_guess = "2"
rand = "0.8"
rustc-hex = "2"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "chrono", "runtime-tokio"] }
tokio = "1"
web3 = { git = "https://github.com/scx1332/rust-web3", branch = "master" }
sha2 = "0.10"
lazy_static = "1.5"
uuid = { version = "1.10", features = ["v4"] }
actix-session = { version = "0.10", features = ["cookie-session"] }

[features]
default = ["proxy"]
dashboard = []
proxy = []

[profile.dev]
debug = false
incremental = false

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 2
